<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.group26.coupletones.AddSpousePage">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Add Your Spouse"
        android:id="@+id/addSpouseTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="Enter Your Spouse Email"
        android:ems="10"
        android:id="@+id/spouseEditTextID"
        android:layout_marginTop="46dp"
        android:textSize="25dp"
        android:textAlignment="center"
        android:layout_below="@+id/addSpouseTitle"
        android:layout_centerHorizontal="true" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update Spouse"
        android:id="@+id/updateSpouseButtonID"
        android:layout_marginTop="59dp"
        android:layout_below="@+id/spouseEditTextID"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
