<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.group26.coupletones.MenuPage"
    tools:showIn="@layout/activity_menu_page">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go To Map"
        android:id="@+id/goToMapBtn"
        android:layout_above="@+id/spouseOptionsBtn"
        android:layout_alignStart="@+id/spouseOptionsBtn"
        android:layout_marginBottom="35dp"
        android:layout_alignEnd="@+id/spouseOptionsBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Spouse Options"
        android:id="@+id/spouseOptionsBtn"
        android:layout_above="@+id/viewSpousesVisitsBtn"
        android:layout_marginBottom="35dp"
        android:layout_alignStart="@+id/viewSpousesVisitsBtn"
        android:layout_alignEnd="@+id/viewSpousesVisitsBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View your Spouse&apos;s Visits"
        android:id="@+id/viewSpousesVisitsBtn"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/viewSOFavsBtn"
        android:layout_alignStart="@+id/viewSOFavsBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View your Spouse&apos;s Favorites"
        android:id="@+id/viewSOFavsBtn"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/viewSpousesVisitsBtn"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Settings"
        android:id="@+id/settingsBtn"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/viewSOFavsBtn"
        android:layout_alignStart="@+id/viewSpousesVisitsBtn"
        android:layout_alignEnd="@+id/viewSOFavsBtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Main Menu"
        android:id="@+id/title_main_menu"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
