<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.group26.coupletones.signUpPage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Register"
        android:id="@+id/textView_SignUp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailTVSignUp"
        android:layout_below="@+id/textView_SignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:hint="Email"
        android:textAlignment="center"
        android:textSize="25dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="Password"
        android:ems="10"
        android:id="@+id/passwordSignUp"
        android:layout_below="@+id/emailTVSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:textSize="25dp"
        android:textAlignment="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="Confirm Password"
        android:ems="10"
        android:id="@+id/confirmPasswordTV"
        android:layout_below="@+id/passwordSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:textSize="25dp"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:id="@+id/signUpButton_SignUp"
        android:layout_below="@+id/confirmPasswordTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp" />

</RelativeLayout>
